--- a/Scanner.API/appsettings.json
+++ b/Scanner.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConStr": "Server=165.232.68.132;Database=Scanner;User Id=sa;Password=e1n2e3s4.A;"
+    "SqlConStr": "Server=138.68.107.105;Database=Scanner;User Id=SA;Password=e1s2e3n4.A;"
   },
   "TokenOptions": {
     "Audience": "www.scanner.com",
